@@ -14,12 +14,45 @@ Why agate?
 * A robust set of SQL-like operations.
 * Unicode support everywhere.
 * Decimal precision everywhere.
-* 100% test coverage.
 * Detailed end-user documentation.
-* Encourages self-documenting code patterns.
 * Pluggable extensions to add `SQL integration <http://agate-sql.readthedocs.org/>`_, etc.
 * Pure Python. No huge C dependencies to compile.
+* 100% test coverage.
 * Zealously `zen <https://www.python.org/dev/peps/pep-0020/>`_.
+
+Show me code
+============
+
+.. code-block:: python
+
+    import agate
+
+    purchases = agate.Table.from_csv('examples/realdata/ks_1033_data.csv')
+
+    by_county = purchases.group_by('county')
+
+    totals = by_county.aggregate([
+        ('total_cost', agate.Sum(), 'county_cost')
+    ])
+
+    totals = totals.order_by('county_cost', reverse=True)
+    totals.limit(10).print_bars('county', 'county_cost', width=80)
+
+::
+
+    county     county_cost
+    SEDGWICK    977,174.45 ▓░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+    COFFEY      691,749.03 ▓░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░
+    MONTGOMERY  447,581.20 ▓░░░░░░░░░░░░░░░░░░░░░░░░░
+    JOHNSON     420,628.00 ▓░░░░░░░░░░░░░░░░░░░░░░░░
+    SALINE      245,450.24 ▓░░░░░░░░░░░░░░
+    FINNEY      171,862.20 ▓░░░░░░░░░░
+    BROWN       145,254.96 ▓░░░░░░░░
+    KIOWA        97,974.00 ▓░░░░░
+    WILSON       74,747.10 ▓░░░░
+    FORD         70,780.00 ▓░░░░
+                           +-------------+-------------+-------------+-------------+
+                           0          250,000       500,000       750,000  1,000,000
 
 Table of contents
 =================
